package ar.utn.dssi.Agregador.models.entities;

import lombok.Getter;
import lombok.Setter;

@Setter
@Getter
public class Categoria {
    private Long idCategoria;
    private String nombre;
}