package ar.utn.dssi.Agregador.models.entities;

public enum Origen {
    FUENTE_ESTATICA,
    FUENTE_DINAMICA,
    FUENTE_PROXY
}
